# deepagents-basic

./: README.md  api.py  main.py  prompts.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: GoalInput.css  GoalInput.jsx  Header.css  Header.jsx  PlanDisplay.css  PlanDisplay.jsx
notebooks/: planner_agent.ipynb
